# sentimentpredictor

./: README.md  pyproject.toml
examples/: example.py
sentimentclassifier/: __init__.py  classifier.py  cli.py  fine_tune.py  integration.py  logger.py  model_loader.py  preprocess.py  suppress_tqdm.py  trends.py  utils.py  visualization.py
sentimentpredictor/: __init__.py  cli.py  fine_tune.py  integration.py  logger.py  model_loader.py  predictor.py  preprocess.py  suppress_tqdm.py  trends.py  utils.py  visualization.py
tests/: test_sentiment_classifier.py  test_sentiment_predictor.py
